<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SubFragments.AddSolution">

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/solution"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/temp2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/mainCustomPrimary"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintStart_toStartOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp" />

    <TextView
        android:id="@+id/temp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/this_will_be_visible_to_students_only_after_the_deadline_is_passed"
        android:textColor="@color/secondary_text"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp2" />


    <TextView
        android:id="@+id/addAttachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/second_btn"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp"
        android:text="@string/add_attachment"
        app:drawableStartCompat="@drawable/ic_attachment_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/maximum_12_files"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="@+id/addAttachment"
        app:layout_constraintStart_toEndOf="@+id/addAttachment"
        app:layout_constraintTop_toTopOf="@+id/addAttachment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewAttachments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/background_blocks_12dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addAttachment" />


    <Button
        android:id="@+id/save"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/first_btn"
        android:elevation="2dp"
        android:gravity="center"
        android:minHeight="0dp"
        android:paddingHorizontal="16dp"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerviewAttachments" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>