<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headlingDialogList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/add_solution"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="96dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="7dp"
            android:background="@color/mainCustomPrimary" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/darkgrey"
            android:layout_marginVertical="8dp"
            android:text="@string/want_to_add_solution"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="8dp"
            android:text="@string/para_add_sol"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:background="@drawable/background_block_6dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:gravity="center"
                android:text="@string/skip"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/mainCustomPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/add"
                android:layout_height="wrap_content"
                android:text="@string/add_solution"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:background="@drawable/first_btn"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>